--- a/gui/azure_config_advanced.ui
+++ b/gui/azure_config_advanced.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>943</width>
+    <width>955</width>
     <height>632</height>
    </rect>
   </property>
@@ -65,6 +65,13 @@
              <widget class="QLabel" name="label_19">
               <property name="text">
                <string>Eviction min threshold (%)</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Cache update file timeout(s)</string>
               </property>
              </widget>
             </item>
@@ -127,6 +134,19 @@
              <widget class="QSpinBox" name="spinBox_fileCache_evictMinThresh">
               <property name="maximum">
                <number>3000</number>
+              </property>
+              <property name="value">
+               <number>60</number>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="spinBox_fileCache_refreshSec">
+              <property name="maximum">
+               <number>4000</number>
+              </property>
+              <property name="singleStep">
+               <number>20</number>
               </property>
               <property name="value">
                <number>60</number>
@@ -495,7 +515,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QSpinBox" name="spinBox">
+          <widget class="QSpinBox" name="spinBox_libfuse_maxFuseThreads">
            <property name="maximum">
             <number>3000</number>
            </property>
